--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Get the contents of a directory recursively (like ls -R)",
   "keywords": [],
   "dependencies": {
-    "walker": "^1.0.6"
+    "walker": "~1.0.6"
   },
   "scripts": {
     "start": "node app.js",
@@ -19,7 +19,7 @@
   "author": "mikermcneil",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^1.20.1",
-    "fs-extra": "^0.10.0"
+    "mocha": "~1.20.1",
+    "fs-extra": "~0.10.0"
   }
 }
