--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "list-directory-contents",
   "version": "0.0.1",
   "description": "Get the contents of a directory recursively (like ls -R)",
-  "keywords": ["ls", "ls -r", "dir", "list files", "directory", "recursive ls"],
+  "keywords": ["ls", "ls -r", "recursive ls", "fs", "dir", "lstat", "recursive stat", "lstat", "list files"],
   "dependencies": {
     "walker": "~1.0.6"
   },
